update:some file about swagger and fix some bugs
