# handler/userinfo.go
@@ -12,9 +12,10 @@ import (
 // @Tags my
 // @Accept json
 // @Produce json
+// @Param token header string true "token"
 // @Success 200 {object} model.Userinfo
 // @Failure 404 "获取失败"
-// Router /homepage/:user_id/info [get]
+// Router /homepage/info [get]
 func Userinfo(c *gin.Context) {
 	token := c.Request.Header.Get("token")
 	id, err := model.VerifyToken(token)
@@ -33,11 +34,12 @@ func Userinfo(c *gin.Context) {
 // @Tags my
 // @Accept json
 // @Produce json
+// @Param user body model.Userinfo true "user"
 // @Param toekn header string true "token"
 // @Success 200 "修改成功"
 // @Failure 401 "验证失败"
 // @Failure 400 "修改失败"
-// @Router /homepage/:user_id/info [put]
+// @Router /homepage/info [put]
 func ChangeInformation(c *gin.Context) {
 	var user model.Userinfo
 	//id := c.Param("user_id")
@@ -51,6 +53,29 @@ func ChangeInformation(c *gin.Context) {
 		return
 	}
 	user.UserId = id
+	if user.UserName == "" {
+		c.JSON(400, gin.H{"message": "用户名不可为空！"})
+		return
+	}
+
+	for _, char := range user.UserName {
+		if string(char) == " " {
+			c.JSON(400, gin.H{"message": "用户名不可为空格！"})
+			return
+		}
+	}
+	if user.UserPassword == "" {
+		c.JSON(400, gin.H{"message": "密码不可为空！"})
+		return
+	}
+
+	for _, num := range user.UserPassword {
+		if string(num) == " " {
+			c.JSON(400, gin.H{"message": "密码中不可以有空格！"})
+			return
+		}
+	}
+
 	fmt.Println(user.UserId)
 	if err2 := model.ChangeUserInfo(user); err2 != nil {
 		c.JSON(400, gin.H{"message": "修改失败"})
